--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
 
 .btn.border {
     border: 1px solid var(--color-gray);
+    background: var(--color-grey);
 }
 
 .input {}
@@ -628,7 +629,9 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     background: var(--color-gray);
 
     padding: 8px 25px 15px;
+}
 
+.models-card__actions-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
 
@@ -739,6 +742,176 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
 /*=======================================================*/
 
 
+/*=============== #EQUIPS ==============*/
+
+.equips {
+    padding-top: 53px;
+}
+
+.equips__filter {
+    margin-top: 44px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 44px;
+}
+
+.select2-container--default .select2-selection--single {
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid var(--color-gray);
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    padding: 0;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 400;
+    color: var(--color-gray);
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border: none;
+
+    background: url(../img/select-arrow.svg)no-repeat;
+
+    width: 19px;
+    height: 9px;
+
+    margin: 0;
+    left: auto;
+    right: 0;
+}
+
+.equips__container {
+    margin-top: 42px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
+.equips-card__engine {
+    background: var(--color-gray);
+
+    padding: 7px 0;
+}
+
+.equips-card__engine-name {
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.equips-card__cont {
+    padding-top: 14px;
+}
+
+.equips-card__name {
+    display: block;
+
+    font-size: 40px;
+    line-height: 42px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--color-blue);
+
+    text-align: center;
+}
+
+.equips-card__name.mob_hide {
+    display: none;
+}
+
+.equips-card__img {
+    margin-top: 13px;
+}
+
+.equips-card__img img {
+    width: 100%;
+}
+
+.equips-card__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.equips-card__list-item {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+
+    font-size: 13px; 
+    line-height: 15px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--color-gray);
+}
+
+.equips-card__prices {
+    margin-top: 18px;
+}
+
+.equips-card__price {
+    display: block;
+
+    text-align: center;
+
+    font-size: 33px;
+    line-height: 35px;
+    color: var(--color-gray);
+    font-weight: 700;
+}
+
+.equips-card__price-old {
+    display: block;
+
+    text-align: center;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: rgba(60, 66, 72, 0.55);
+    text-decoration: line-through;
+}
+
+.equips-card__price-month {
+    display: block;
+
+    text-align: center;
+
+    font-size: 25px;
+    line-height: 27px;
+    font-weight: 400;
+
+    margin-top: 8px;
+}
+
+.equips-card__btns {
+    margin-top: 18px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+
+.equips-card-button {
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+    color: var(--color-gray);
+}
+
+.equips-card-button.bg_blue {
+    color: var(--color-white);
+}
+
+/*=======================================================*/
+
+
 
 @media screen and (min-width: 450px) {
     .actions__btn {
@@ -752,6 +925,20 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     }
 
     .models-card {
+        width: 400px;
+    }
+
+    .equips__container {
+        align-items: center;
+    }
+
+    .equips__filter {
+        width: 400px;
+
+        margin: 44px auto 0;
+    }
+    
+    .equips-card {
         width: 400px;
     }
 }
