--- a/css/style.css
+++ b/css/style.css
@@ -827,6 +827,27 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     right: 0;
 }
 
+.select2-search {
+    display: none;
+}
+
+.select2-container--default .select2-results__option--selected {
+    background: var(--color-gray);
+    color: var(--color-white);
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+    background: var(--color-blue);
+}
+
+.select2-results__option {
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+    color: var(--color-blue);
+    text-transform: uppercase;
+}
+
 .equips__container {
     margin-top: 42px;
 
@@ -1225,9 +1246,237 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
 }
 
 
+/*=============== #CONTACTS ==============*/
+
+.contacts__bg {
+    background: url(../img/contact__mob.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    height: 373px;
+}
+
+.contacts__upper {
+    padding-top: 28px;
+}
+
+.contacts__list {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+
+    margin-top: 18px;
+}
+
+.contacts__list-item,
+.contacts__list-link {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 400;
+    color: var(--color-gray);
+    text-decoration: none;
+}
+
+.contacts__list-item img,
+.contacts__list-link img {
+    width: 28px;
+}
+
+.contacts__btn {
+    margin-top: 28px;
+
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
 /*=======================================================*/
 
 
+/*=============== #FOOTER ==============*/
+
+.footer {
+    padding: 25px 0 40px;
+
+    background: linear-gradient(180deg, #3C4248 0%, rgba(0, 0, 0, 0.83) 100%);
+
+    margin-top: 31px;
+}
+
+.footer__text {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.footer__text.bold {
+    font-weight: 600;
+}
+
+.footer__btn {
+    background: none;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    text-decoration: underline;
+    color: var(--color-white);
+    padding: 0;
+
+    margin: 21px 0 28px;
+}
+
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    margin-bottom: 18px;
+}
+
+.footer__info {
+    margin-top: 28px;
+}
+
+.footer__info-toggle {
+    display: none;
+}
+
+/*=======================================================*/
+
+.popup {
+    padding: 28px 20px 15px;
+
+    width: 99%;
+
+    border-radius: 10px;
+}
+
+#modalSpecial {
+    background: url(../img/modal-special_mob.webp)no-repeat;
+    background-size: cover;
+}
+
+.popup__head {
+    display: block;
+
+    font-size: 23px;
+    line-height: 25px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.popup__head .big_text {
+    text-transform: uppercase;
+}
+
+.popup__info {
+    height: 60px;
+    width: 100%;
+
+    background: var(--color-gray);
+
+    display: flex;
+    align-items: center;
+
+    margin-left: -20px;
+
+    padding-left: 20px;
+
+    border-radius: 0 4px 4px 0;
+
+    margin-top: 19px;
+}
+
+.popup__info-text {
+    display: block;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 600;
+    color: var(--color-white);
+}
+
+.popup__list {
+    display: flex;
+    flex-direction: column;
+
+    margin-top: 14px;
+}
+
+.popup__list-item {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.popup__list-item b {
+    font-weight: bold;
+}
+
+.popup__form {
+    margin-top: 19px;
+}
+
+.popup__form-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.popup__form-input {
+    width: 100%;
+    height: 40px;
+
+    background: none;
+
+    border-radius: 32px;
+    border: 1px solid var(--color-white);
+
+    padding-left: 19px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.popup__form-input::placeholder {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.popup__form-btn {
+    margin-top: 11px;
+
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.is-compact .fancybox__content>.f-button.is-close-btn {
+    background: none;
+
+    opacity: 1;
+}
+
+
+@media screen and (min-width: 414px) {
+    .popup {
+        width: 355px;
+    }
+}
 
 @media screen and (min-width: 450px) {
     .actions__btn {
@@ -1259,6 +1508,10 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     }
 
     .banner__form {
+        width: 400px;
+    }
+
+    .contacts__btn {
         width: 400px;
     }
 }
