--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ body {
     font-family: var(--family-open);
 }
 
+.color_text_blue {
+    color: var(--color-blue);
+}
+
 .btn {
     width: 100%;
 
@@ -595,10 +599,40 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
 
 .models-card__img {
     position: relative;
+
+    z-index: 1;
+}
+
+.models-card__img-name {
+    position: absolute;
+    right: 0;
+    top: -65px;
+
+    font-size: 130px;
+    line-height: 132px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background: linear-gradient(178deg, rgba(43, 60, 76, 0.20) -46.25%, rgba(43, 60, 76, 0.00) 94.77%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #0B2349;
+    display: table;
 }
 
 .models-card__img img {
     width: 100%;
+
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .6s;
+}
+
+.models-card__img img.js-active {
+    position: inherit;
+    opacity: 1;
 }
 
 .models-card__images-img {
@@ -773,12 +807,13 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
 }
 
 .models-card__line {
-    width: 100%;
+    width: 87%;
     height: 2px;
 
-    background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 87, 255, 1));
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,86,183,1) 100%);
     
     margin-top: 30px;
+    margin-left: auto;
 }
 
 
@@ -1202,6 +1237,9 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     justify-content: space-between;
 
     margin-top: 30px;
+
+    position: relative;
+    z-index: 1;
 }
 
 .trade__form .banner__form-inputs {
@@ -1357,11 +1395,33 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     width: 99%;
 
     border-radius: 10px;
+
+    display: none;
 }
 
 #modalSpecial {
     background: url(../img/modal-special_mob.webp)no-repeat;
     background-size: cover;
+}
+
+#modalOffer {
+    background: url(../img/modal-offer_mob.webp)no-repeat;
+    background-size: cover;
+}
+
+#modalSus,
+#modalSus2 {
+    height: 165px;
+    background: var(--color-white);
+}
+
+#modalSus .popup__cont,
+#modalSus2 .popup__cont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 100%;
 }
 
 .popup__head {
@@ -1371,6 +1431,15 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     line-height: 25px;
     font-weight: 700;
     color: var(--color-white);
+}
+
+#modalSus .popup__head,
+#modalSus2 .popup__head {
+    font-size: 22px;
+    line-height: 24px;
+    font-weight: 600;
+    color: #515F6C;
+    text-align: center;
 }
 
 .popup__head .big_text {
@@ -1393,6 +1462,10 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     border-radius: 0 4px 4px 0;
 
     margin-top: 19px;
+}
+
+#modalOffer .popup__info {
+    width: 109%;
 }
 
 .popup__info-text {
@@ -1469,6 +1542,11 @@ box-shadow: 0px -2px 21px 0px rgba(119, 114, 114, 0.49);
     background: none;
 
     opacity: 1;
+}
+
+#modalSus .f-button svg,
+#modalSus2 .f-button svg {
+    stroke: var(--color-black);
 }
 
 
